--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -11,3 +11,10 @@ body {
     position: relative;
 }
 
+nav {
+    background-color: rgba(0,0,0,0.66);
+}
+
+.nav-link, .nav-link:hover {
+    color: white;
+}
