--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -26,7 +26,8 @@ nav {
 
 .secondary {
     /*color: #8c8c8c;*/
-    color: rgba(60,49,193,0.40);
+    /*color: rgba(60,49,193,0.40);*/
+    color: #6c757d !important;
 }
 
 h1,h2,h3,h4 {
@@ -49,5 +50,59 @@ hr {
     text-align: center;
     height: 5px;
     width: 100%;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
 }
+
+.hero { /*Taken From AOS main-page. I liked the hero image. ;) */
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    color: #FFF;
+    text-align: center;
+}
+
+.hero-center {
+    width: 100%;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: rgba(33, 37, 41, 0.27);
+    background-clip: border-box;
+    /*border: 1px solid hsl(245, 60%, 47%);*/
+    border-radius: 0.25rem;
+}
+
+/*body::before {*/
+/*    position: fixed;*/
+/*    top: 500px;*/
+/*    left: -100px;*/
+/*    bottom: 0;*/
+/*    content: '';*/
+/*    width: 400px;*/
+/*    height: 400px;*/
+/*    border: 2px solid rgba(255, 255, 255, 0.05);*/
+/*    z-index: -1;*/
+/*    -webkit-transform: rotate(20deg);*/
+/*    -moz-transform: rotate(20deg);*/
+/*    -ms-transform: rotate(20deg);*/
+/*    -o-transform: rotate(20deg);*/
+/*    transform: rotate(20deg);*/
+/*}*/
 
