other languages cards

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -129,5 +129,6 @@ html {
 }
 
 footer {
-    background-color: rgb(18, 18, 18);
+    /*background-color: rgb(18, 18, 18);*/
+    background-color: #161718;
 }
