--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,20 +1,9 @@
-#left-col-big {
-    background-color: silver;
-}
-
-#head-shot {
-    /*max-width: 50%;*/
-}
-
 body {
-/*    Scrollspy needs position: relative*/
-/*    position: relative;*/
     background-color: #121212;
     color: #D9D9D9;
 }
 
 nav {
-    /*background-color: rgb(18, 18, 18);*/
 }
 
 .nav-link, .nav-link:hover {
@@ -25,13 +14,7 @@ nav {
     color: #3e77aa !important;
 }
 
-.navbar-toggler {
-
-}
-
 .secondary {
-    /*color: #8c8c8c;*/
-    /*color: rgba(60,49,193,0.40);*/
     color: #404040 !important;
 }
 
@@ -63,11 +46,9 @@ hr {
     text-align: center;
     height: 5px;
     width: 100%;
-    /*margin-top: 10rem;*/
-    /*margin-bottom: 10rem;*/
 }
 
-.hero { /*Taken From AOS main-page. I liked the hero image. ;) */
+.hero {
     width: 100%;
     height: 100vh;
     position: relative;
@@ -112,8 +93,6 @@ html {
 }
 
 .card-header {
-    /*padding: 0.5rem 1rem;*/
-    /*margin-bottom: 0;*/
     background-color: rgba(0, 0, 0, 0.03);
     border-bottom: 1px solid rgb(62, 119, 170);
 }
@@ -133,7 +112,6 @@ html {
 }
 
 footer {
-    /*background-color: rgb(18, 18, 18);*/
     background-color: #161718;
 }
 
@@ -158,18 +136,9 @@ footer {
 }
 
 .card-add-border {
-    /*border-color: #3e77aa;*/
     border: #3e77aa 1px solid;
     border-top: transparent;
     box-shadow: 0 0 10px #3e77aa;
-}
-
-.card-img-top {
-    /*box-shadow: 0px 0px 10px #3e77aa;*/
-    /*outline: 2px solid #3e77aa;*/
-    /*outline-offset: -2px;*/
-    /*position: relative;*/
-    /*z-index: -2;*/
 }
 
 .modal-content {
@@ -213,21 +182,6 @@ footer {
     color: white;
 }
 
-/*Remove left sidebar when under 767px*/
-@media only screen and (max-width: 767px) {
-    #head-shot-col {
-        display: none;
-    }
-    /*#main-col-right {*/
-    /*    -ms-flex: 0 0 100%;*/
-    /*    flex: 0 0 100%;*/
-    /*    max-width: 100%;*/
-    /*}*/
-    /*#logo-png {*/
-    /*    max-height: 200px;*/
-    /*}*/
-}
-
 @media (min-width: 768px) {
     .modifiedBootstrap__my-lg-6 {
         margin-top: 10rem !important;
@@ -265,17 +219,9 @@ footer {
     color: #3e77aa !important;
 }
 
-a {
-    /*text-decoration-color: #3e77aa;*/
-}
-
-.card-body {
-    /*border-color: #3e77aa;*/
-}
-
 /*IE Bugs*/
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .card-img-top {
-     max-height: 270px; /*Fixing weird (Bootstrap?) bug, where card images stretch hella far down*/
+     max-height: 270px; /*Fixing weird (Bootstrap?) bug, where card images stretch very far down*/
  }
 }
